--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,73 @@
 NEWS/ChangeLog for hydroGOF
 --------------------------
 
+
+0.3-0	01-Sep-2011
+
+	o NAMESPACE created, which leads to reduced dependency on the package hydroTSM.
+	o hydroGOF now depends on xts >= 0.8-2 (=> zoo >= 1.7-2), in order to make use of improved plotting capabilities for ts objects.
+          The first release of 'xts' after the 0.8-0 (which was set as the default building block for plotting time series in hydroTSM) 
+          was the 0.8-2, and appeared on CRAN on August 9th, 2011       
+	o now it depends on 'hydroTSM' >= 0.3-0, in order to use the re-written 'drawxaxis/drawTimeAxis' function.	
+	o a vignette is now included with the package, in order to illustrate some basic functionality of hydroGOF
+	o 'plot2'        : -) better display of time series objects, when 'plot.type' is 'single'.
+		              The (nicer) 'plot.xts' function is used instead of the previous 'plot.zoo'.
+		           -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "weeks", "hours", "minutes", 
+		              "seconds", which should work with sub-daily time series
+		           -) when 'cal.ini' is provided, all the values in 'obs' and 'sim' with dates previous to 'cal.ini' are SKIPPED 
+		              from the computation of the goodness-of-fit measures (when 'gof.leg=TRUE'), but their values are still plotted, 
+		              in order to examine if the warming up period was too short, acceptable or too long for the chosen calibration
+		              period.
+		           -) fixed problem with the 'cex.axis' argument when 'plot.type="multiple"' (this was a zoo problem, and it was 
+		              fixed in zoo_1.7-1).		           
+	o 'ggof'         : -) better display of time series objects (by using the new 'plot2' and 'drawxaxis/drawTimeAxis')
+		           -) it works with xts objects as well.
+		           -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "quarters", "weeks", "hours", 
+	 	              "minutes", and "seconds", and its default value was changed to "auto". 
+	 	           -) the name of 'sim' and 'obs' are now used as default for the legend.
+	 	           -) when 'cal.ini' is provided, all the values in 'obs' and 'sim' with dates previous to 'cal.ini' are SKIPPED 
+		              from the computation of the goodness-of-fit measures (when 'gof.leg=TRUE'), but their values are still plotted, 
+		              in order to examine if the warming up period was too short, acceptable or too long for the chosen calibration
+		              period.
+		           -) added error checking for 'ftype' when 'sim' and 'obs' are not time series.
+	o 'plotbands'    : -) better display of time series objects. The (nicer) 'plot.xts' function is used 
+			      instead of the previous 'plot.zoo', and it uses the new 'drawTimeAxis' function.
+		           -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "quarters", "weeks", "hours", 
+	 		      "minutes", and "seconds", and its default value was changed to "auto". 
+	o 'plotbandsonly': -) it works with xts objects as well
+			   -) 'legend' argument was removed (it was not used)
+			   -) 'leg.cex' argument was removed (it was not used)
+	o 'NSeff'   : -) its name was changed to 'NSE'. The old name 'NSeff' is deprecated but is still working for backwards compatibility.
+	              -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'rNSeff'  : -) its name was changed to 'rNSE'. The old name 'rNSeff' is deprecated but is still working for backwards compatibility.
+	              -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'mNSeff'  : -) its name was changed to 'mNSE'. The old name 'mNSeff' is deprecated but is still working for backwards compatibility.
+	              -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'rd'      : -) a warning message is created when -at least one of- the observed values is/are zero,
+	                 which makes impossible to compute this index (thanks to Tom Purucker !)
+	              -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'rNSE'    : -) a warning message is created when -at least one of- the observed values is/are zero,
+	                 which makes impossible to compute this index
+	              -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'md'      : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'pbias'   : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'pbiasfdc': -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'pfactor' : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'rfactor' : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'rSD'     : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'RSR'     : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'NRMSE'   : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'KGE'     : -) now it returns NA instead of '-Inf' when the denominator of Alpha or Beta were equal to zero.	
+	o New dimension checking (number of columns and rows) for all the functions that are applied over a matrix or data.frame
+	o fixed error in the documentation of 'rd' (thanks to Tom Purucker !)
+	
+
 0.2-2	14-Apr-2011
+
 	o new function: 'KGE', Kling-Gupta efficiency
-	o 'ggof': argument 'lab.fmt' is used now, and 'KGE' is showed in the GoF legend
+	o 'ggof': argument 'lab.fmt' is used now, and 'KGE' is shown in the GoF legend
 	o 'plot2': KGE is showed in the GoF legend
-	o SVN started to be used for package develpement in Rforge (thanks to Simon Urbanek for his great support)        
+	o SVN started to be used for package development in Rforge (thanks to Simon Urbanek for his great support)        
 	o Updated dependence on R >= 2.10.0
 
 
