--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,16 @@
 NEWS/ChangeLog for hydroGOF
 --------------------------
 
-
+0.3-4	03-Jul-2012
+        o new function 'VE', which computes the volumetric efficiency proposed by Criss and Winston 2008
+         (thanks to Eric Morway for giving the final push to include it !)
+        o 'gof'   : VE is now included in the computed goodness-of-fit measures
+        o 'ggof'  : VE is now included in the computed goodness-of-fit measures
+        o 'plot2' : VE is now included in the computed goodness-of-fit measures (when 'leg.gof=TRUE')
+        o function '.intersect' was removed and function 'valindex' was improved in order to replace it
+        o 'zoo' package was moved from 'Imports' to 'Depends'
+        o 'methods' package is now imported, in order to avoid problems with Rscript, which currently does not load 'methods'
+        
 0.3-3	02-May-2012
         o 'gof'   : added new example and description of the output class (thanks to Kris Jaeger !)
 	o 'br2'   : the new example included in version 0.3-2 was improved
@@ -74,28 +83,6 @@ NEWS/ChangeLog for hydroGOF
 	o 'KGE'     : -) now it returns NA instead of '-Inf' when the denominator of Alpha or Beta were equal to zero.	
 	o 'rd'      : -) fixed documentation error in its formula (thanks to Tom Purucker !). Its value was already computed in the correct way.
 	o New dimension checking (number of columns and rows) for all the functions that are applied over a matrix or data.frame
-	
-
-0.2-2	14-Apr-2011
-
-	o new function: 'KGE', Kling-Gupta efficiency
-	o 'ggof': argument 'lab.fmt' is used now, and 'KGE' is shown in the GoF legend
-	o 'plot2': KGE is showed in the GoF legend
-	o SVN started to be used for package development in Rforge (thanks to Simon Urbanek for his great support)        
-	o Updated dependence on R >= 2.10.0
-
-
-0.2-1	30-Nov-2010
-
-	o Minor changes in documentation
-	o R functions were split up into individual files
-	o new function: 'plotbandsonly', adds uncertainty bounds only to an existing plot
-	o 'ggof': argument '...' is used now, and a new argument 'lab.fmt', for specifying the format of the axis' labels
-	o 'plotbands':  arguments 'ylab', 'cex.axis', 'cex.lab' are used now. 
-			argument 'legend' can now be logical (FALSE), in order to allow not having it.
-			new arguments 'ylim', 'lab.fmt' (for specifying the format of the axis' labels)
-			'sim' is now correctly plotted when 'type="points"' is used.
-	o 'plot2': new argument: 'lab.fmt', for specifying the format of the axis' labels
 
 
 
@@ -103,6 +90,8 @@ NEWS/ChangeLog for hydroGOF
 # Previous Releases (see old file 'WhatsNew.txt)' #
 ###################################################
 
+0.2-2: Release Date: 14-Apr-2011
+0.2-1: Release Date: 30-Nov-2010
 0.2-0: Release Date: 07-Oct-2010
 0.1.3: Release Date: 01-Dec-2009
 0.1.2: Release Date: 29-Oct-2009
