--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,37 @@
 NEWS/ChangeLog for hydroGOF
 --------------------------
 
+0.3-6	22-Mar-2013
+        o 'gof'         : -) now it works with matrices/data.frames of zoo/xts class. Thanks to L. Pagliero !
+                          -) new arguments 's' and 'method' which are passed to the 'KGE' function ('out.type' is fixed to "single")
+                          -) new argument 'j', which is passed to the 'mNSE' function
+                          -) new argument 'norm', which is passed to the 'nrmse' function                          
+                          -) new arguments 'lQ.thr' and 'hQ.thr', which are passed to the (optional) 'pbiasfdc' function       
+        o 'NSE'         : -) now it works with matrices/data.frames of zoo class.
+        o 'me'          : -) now it works with matrices/data.frames of zoo class.
+        o 'mae'         : -) now it works with matrices/data.frames of zoo class.
+        o 'mse'         : -) now it works with matrices/data.frames of zoo class.
+        o 'rmse'        : -) now it works with matrices/data.frames of zoo class.     
+        o 'rsr'         : -) now it works with matrices/data.frames of zoo class.                                                          
+        o 'rSD'         : -) now it works with matrices/data.frames of zoo class.                                                          
+        o 'pbias'       : -) now it works with matrices/data.frames of zoo class.                                                          
+        o 'mNSE'        : -) now it works with matrices/data.frames of zoo class.                                                          
+        o 'rNSE'        : -) now it works with matrices/data.frames of zoo class.                                                                                                                    
+        o 'md'          : -) now it works with matrices/data.frames of zoo class.                                                                 
+        o 'cp'          : -) now it works with matrices/data.frames of zoo class.                                                          
+        o 'rPearson'    : -) now it works with matrices/data.frames of zoo class.                                                          
+        o 'br2'         : -) now it works with matrices/data.frames of zoo class.                                                          
+        o 'KGE'         : -) now it works with matrices/data.frames of zoo class.      
+        o 'VE'          : -) now it works with matrices/data.frames of zoo class.  
+        o 'd'           : -) now it works with matrices/data.frames of zoo class.         
+                          -) fixed typo in the formula presented in the pdf manual (a square was missing). Thanks to T. Ladson and  I. Thiele-Eich !
+        o 'rd'          : -) now it works with matrices/data.frames of zoo class. 
+                          -) fixed typo in the formula presented in the pdf manual (a square was missing). Thanks to I. Thiele-Eich !                                                   
+        o 'nrmse'       : -) now it works with matrices/data.frames of zoo class.                          
+	o 'nrmse.matrix': fixed error in checking the 'norm' argument.
+	o 'valindex'    : a warning was added when 'sim' and 'obs' do not have any pair of elements with data in both variables.
+        o e-mail address of maintainer was changed from the @ing.unit.it to @gmail.com. Same change applied for all the .Rd files
+	
 0.3-5	19-Oct-2012
 	o now it depends on 'hydroTSM' >= 0.3-6, in order to allow handling sub-daily values in 'ggof'
         o 'ggof'      : -) now it handles sub-daily values in 'sim' and 'obs' (aggregation to daily/monthly/annual values not yet available)
